2007-05-30  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: s/DESKTOP_LAUNCH_ID/DESKTOP_STARTUP_ID/
	Thanks to Dan Winship <danw@gnome.org> for catching this.
	Bug #11081.

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: scanf behavior is locale-dependent, and the
	numeric type shouldn't be. Specify that the value is a floating point
	number as recognized by scanf in the C locale.
	Thanks to Dan Winship <danw@gnome.org> for catching this.
	http://lists.freedesktop.org/archives/xdg/2007-April/009732.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: clarify description for the TryExec key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009556.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: change "the $PATH" to "the $PATH environment
	variable".
	http://lists.freedesktop.org/archives/xdg/2007-March/009552.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: improve the description of the Comment key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009440.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: a desktop file of type Application should
	always have an Exec key. Same for Link Type and URL key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: desktop files of type Directory have a
	.directory extension right now (at least in GNOME), but according to
	the spec, this is wrong. The patch fixes this. Also, it removes a
	small part of text explaining the name of a desktop file describing a
	directory.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml:clarify a bit the text about keys that only
	makes sense in a specific context. Also, state that the keys should
	not be used outside of this context. For example, the URL key should